# cutomer-churn-mlops-k8s

./: README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: mlops-ci.yaml
app/: train.py
cutomer_churn_mlops_k8s.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlruns/0/: meta.yaml
mlruns/0/16fa3a0627444c32af73d12ee13f5e0e/: meta.yaml
mlruns/0/16fa3a0627444c32af73d12ee13f5e0e/metrics/: accuracy  auc
mlruns/0/16fa3a0627444c32af73d12ee13f5e0e/tags/: mlflow.runName
mlruns/0/24dc5685a8df4484a5f4150f059af318/: meta.yaml
mlruns/0/24dc5685a8df4484a5f4150f059af318/metrics/: accuracy  auc
mlruns/0/24dc5685a8df4484a5f4150f059af318/tags/: mlflow.runName
mlruns/0/27b2279288e641a196abcd259d76285a/: meta.yaml
mlruns/0/27b2279288e641a196abcd259d76285a/metrics/: accuracy  auc
mlruns/0/27b2279288e641a196abcd259d76285a/tags/: mlflow.runName
mlruns/0/32057c363ce44f178ca6a6aa11bea903/: meta.yaml
mlruns/0/32057c363ce44f178ca6a6aa11bea903/metrics/: accuracy  auc
mlruns/0/3b9ff9fff53e43b48f557bf7731ec207/: meta.yaml
mlruns/0/458aacaec7604d1da31e3e7fa7d3d354/: meta.yaml
mlruns/0/6767f870dd6f42a59665d5544d20d35d/: meta.yaml
mlruns/0/6a8b4511e29e46718e57db6a7e729a95/: meta.yaml
mlruns/0/6d7284c0eeb5404584bc41ce8e0a4639/: meta.yaml
mlruns/0/832a510d056346a09564ed95fa3b7947/: meta.yaml
mlruns/0/925f3f0c416048d0863ac57fae216cf5/: meta.yaml
mlruns/0/f406a5678fba4dfd98c37d9700467686/: meta.yaml
notebooks/: preprocessing.py  test.ipynb
processed/: .gitignore
tests/: test_preprocess.py  test_train.py
(+88 files in other folders)
