[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutomer-churn-mlops-k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive,gs]>=3.61.0",
    "mlflow>=3.1.4",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
]

[tool.setuptools]
packages = ["app","notebooks"]
